--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +18,9 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "nodemailer": "^6.6.0",
-    "nodemon": "^2.0.7",
     "pg": "^8.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
