--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
 
-EMAIL_USERNAME=avia.trans.info@gmail.com
-EMAIL_PASSWORD=Trans.Avia_2020
+EMAIL_USERNAME=#####
+EMAIL_PASSWORD=#####
 
 DB_USER=postgres
 DB_DATABASE=testdb
